2012-08-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-merge-records): Improve interactive call
	and docstring.

2012-08-01  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-allow-duplicates, bbdb-hash-update)
	(bbdb-record-set-field): Fix docstring.
	* lisp/bbdb-com.el (bbdb-merge-records): Do not through an error
	when merging the old and new record results in duplicate AKAs and
	email addresses.

2012-07-31  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): When a single record
	matches, analyze more carefully which mail address to use.  Cycle
	even if the record contains only one mail address, yet
	bbdb-dwim-mail gives us something different from what we have.
	Search correctly for RFC 822 addresses containing a full name.

2012-07-20  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-annotate-message): Simplify. Create new
	record if update-p has not value update.

2012-07-20  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-gethash): Allow value of t for arg predicate.

2012-07-20  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-com.el (bbdb-message-search): Allow args name or mail
	to be nil.

2012-07-19  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el: Simplify previous patch.
	(bbdb-electric-execute, bbdb-electric-quit, bbdb-electric-quit):
	Remove.
	(bbdb-display-records): Simplify.
	(bbdb-electric-display-records): Fix docstring.  Simplify.  Remove
	optional args select and horiz-p that interfere with
	Electric-pop-up-window.

2012-07-18  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-electric-display-records): Fix previous
	patch.

2012-07-18  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el: Autoload bbdb-search and bbdb-search-prompt.
	(bbdb-display-records): Make records a required arg.  Do not
	redefine keys.  Pass optional args to
	bbdb-electric-display-records.
	(bbdb-electric-display-records): New optional args layout, append,